kubernetes/argocd/values/usargentonhb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usargentonhb
  namespace: usargentonhb
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: usargentonhb
